Fix post alignment

--- a/static/root.css
+++ b/static/root.css
@@ -114,6 +114,7 @@ code {
   display: flex;
   flex-wrap: wrap;
   margin-left: -16px;
+  justify-content: space-evenly;
 }
 
 .post-preview {
